--- a/Ecommerce/Services/Basket/Basket.Application/Basket.Application.csproj
+++ b/Ecommerce/Services/Basket/Basket.Application/Basket.Application.csproj
@@ -9,5 +9,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Basket.Core\Basket.Core.csproj" />
   </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="13.0.1" />
+		<PackageReference Include="MediatR" Version="12.3.0" />
+	</ItemGroup>
 </Project>
