--- a/Ecommerce/Services/Basket/Basket.API/Properties/launchSettings.json
+++ b/Ecommerce/Services/Basket/Basket.API/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "http": {
+    "Basket.API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5002"
+      "applicationUrl": "http://localhost:8002"
     },
     "IIS Express": {
       "commandName": "IISExpress",
