--- a/Ecommerce/docker-compose.override.yml
+++ b/Ecommerce/docker-compose.override.yml
@@ -1,3 +1,5 @@
+version: '3.4'
+
 services:
   catalogdb:
     container_name: catalogdb
@@ -6,6 +8,12 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+  
+  basketdb:
+    container_name: basketdb
+    restart: always
+    ports:
+      - "6379:6379" 
 
   catalog.api:
     container_name: catalog.api
@@ -15,8 +23,18 @@ services:
       - "DatabaseSettings__DatabaseName=CatalogDb"
       - "DatabaseSettings__CollectionName=Products"
       - "DatabaseSettings__BrandsCollection=Brands"
-      - "DatabaseSettings__TypesCollection=Types"  
+      - "DatabaseSettings__TypesCollection=Types"      
     depends_on:
       - catalogdb
     ports:
       - "8000:8080"
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings__ConnectionString=basketdb:6379"      
+    depends_on:
+      - basketdb      
+    ports:
+      - "8002:8080"
