--- a/Ecommerce/Services/Catalog/Catalog.Application/Catalog.Application.csproj
+++ b/Ecommerce/Services/Catalog/Catalog.Application/Catalog.Application.csproj
@@ -12,7 +12,10 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+	  <PackageReference Include="Grpc.AspNetCore" Version="2.66.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
-
+	<ItemGroup>
+		<Protobuf Include="Protos\discount.proto" GrpcServices="Server" />
+	</ItemGroup>
 </Project>
