--- a/Ecommerce/Services/Discount/Discount.Application/Discount.Application.csproj
+++ b/Ecommerce/Services/Discount/Discount.Application/Discount.Application.csproj
@@ -5,20 +5,20 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Protos\discount.proto" />
+  </ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="13.0.1" />
 		<PackageReference Include="Grpc.AspNetCore" Version="2.66.0" />
 		<PackageReference Include="MediatR" Version="12.4.1" />
 	</ItemGroup>
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Handlers\" />
-    <Folder Include="Mapper\" />
-    <Folder Include="Queries\" />
-    <Folder Include="Protos\" />
+    <ProjectReference Include="..\Discount.Core\Discount.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Catalog\Catalog.Core\Catalog.Core.csproj" />
+    <Protobuf Include="Protos\discount.proto" GrpcServices="Server" />
   </ItemGroup>
 
 </Project>
